# idaes-connectivity

./: .gitignore  COPYRIGHT.md  README.md  copyright-header.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
docs/: _config.yml  _toc.yml  api.html  api.md  cli.html  cli.md  copyright.html  copyright.md  diagrams.html  diagrams.md  example.html  genindex.html  index.html  index.md  install.html  install.md  intro.md  mermaid_in_jupyter.html  mermaid_in_jupyter.ipynb  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.md
docs/_sources/jupyter_execute/: example.ipynb  mermaid_in_jupyter.ipynb
docs/jupyter_execute/: example.html  mermaid_in_jupyter.html
docs_src/: README.md  _toc.yml  api.md  copyright.md  diagrams.md  example.md  install.md  mermaid_html.ipynb  mermaid_in_jupyter.ipynb  requirements.txt
examples/: mermaid_in_jupyter.ipynb
idaes_connectivity/: __init__.py  base.py  cli.py  conftest.py  connectivity.py  const.py  excalidraw_model.py  jupyter.py  util.py  version.py
idaes_connectivity/examples/: Untitled.ipynb
idaes_connectivity/examples/.ipynb_checkpoints/: heating_flowsheet_rework_copy-checkpoint.py
idaes_connectivity/tests/: connectivity_data.py  example_flowsheet.py  example_flowsheet2.py  example_flowsheet_2.py  example_flowsheet_data.py  gen_conn_data.py  save_example_flowsheet.py  test_base.py  test_cli.py  test_connectivity.py  test_const.py  test_idaes.py  test_jupyter.py  test_util.py  util.py
