[build-system]
requires = [
    "setuptools >= 64",
]
build-backend = "setuptools.build_meta"

[project]
name = "idaes-connectivity"
description = "Tools to display and export connectivity within IDAES process models."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["IDAES", "energy systems", "chemical engineering", "process modeling"]
dynamic = ["version"]
dependencies = [
    "pyomo >= 6.7.0",
    "pydantic >= 2",
    "ipython >= 8.3.0",
    "idaes-pse >= 2.7.0",
    "pandas >= 2.2.3",
    "psutil >= 7.2.2",
    "requests"
]

[project.urls]
Homepage = "https://github.com/prommis/idaes-connectivity"
Documentation = "https://prommis.github.io/idaes-connectivity/"
Repository = "https://github.com/prommis/idaes-connectivity"
Issues = "https://github.com/prommis/idaes-connectivity/issues"

[project.scripts]
idaes-conn = "idaes_connectivity.cli:main"

[tool.setuptools]
packages = ["idaes_connectivity", "idaes_connectivity.tests", "idaes_connectivity.images"]

[tool.setuptools.package-data]
idaes_connectivity = ["images/*.png", "images/*.svg"]

[tool.setuptools.dynamic]
version = {attr = "idaes_connectivity.version.VERSION"}

[tool.pylint.main]
py-version = "3.9"

[tool.pylint."messages control"]
disable = [
    "E", # all errors
    "W", # all warnings
    "C", # all conventions
    "R", # all refactor
]
# see https://pylint.readthedocs.io/en/v2.17.7/user_guide/messages/index.html
# for a list of all messages
enable = [
    "import-error",
    "unused-import",
    "wildcard-import",
    "wrong-import-order",
    "wrong-import-position",
    "ungrouped-imports",
    "implicit-str-concat",
    "dangerous-default-value",
    "invalid-name",
]
module-naming-style = "snake_case"
const-naming-style = "any"
class-naming-style = "any"
function-naming-style = "any"
method-naming-style = "any"
attr-naming-style = "any"
argument-naming-style = "any"
variable-naming-style = "any"
class-attribute-naming-style = "any"
inlinevar-naming-style = "any"

[tool.pytest.ini_options]
addopts = """
--pyargs idaes_connectivity
--import-mode=importlib
-rsx
"""

[tool.typos.files]
extend-exclude = [
    "*.svg",
    "*.json",
]

[tool.typos.default.extend-words]
# Ignore IDAES
IDAES = "IDAES"
# Atomic elements
Nd = "Nd"
[tool.typos.default]
extend-ignore-re = [
    # Jupyter notebooks: ignore hexadecimal values in "id" cell metadata field
    '"id": "[0-9a-f]+",'
]
